# django-elevate

./: .pre-commit-config.yaml  conftest.py  pyproject.toml  setup.py  tasks.py  tox.ini
.github/workflows/: main.yml
docs/: conf.py
docs/config/: index.rst
elevate/: __init__.py  forms.py  middleware.py  settings.py  signals.py  utils.py  views.py
tests/: base.py  decorators.py  forms.py  middleware.py  mixins.py  models.py  signals.py  urls.py  utils.py  views.py
